--- a/public/css/main.css
+++ b/public/css/main.css
@@ -49,13 +49,30 @@ canvas {
 
 a {
     display: inline-block;
+    margin: 0;    
     margin-bottom: 1em;
-    padding: 1em 2em;
-    background: #888;
+    margin-right: 1em;
+    padding: .4em .8em;
+    background:cadetblue;
     color: white;
-    border-radius: 2px;
     font-family: "Ubuntu Condensed";
     cursor: pointer;
     user-select: none;
 }
-a:active { background: #777; }
+a:hover { background: #3c8386; }
+.large {
+    margin-bottom: 1em;
+    padding: 1em 2em;
+}
+
+input[type="text"] {
+    border: 2px solid #ccc;
+    margin-bottom: .5em;
+    padding: .5em;
+    color: #555;
+    transition: ease .2s;
+}
+input[type="text"]:focus {
+    border: 2px solid cadetblue;
+    outline: none;
+}
