--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,7 @@ html, body {
   width:  100%;
   height: 100%;
   margin: 0px;
+  overflow: hidden;
 }
 
 canvas {
@@ -64,6 +65,10 @@ a:hover { background: #3c8386; }
     margin-bottom: 1em;
     padding: 1em 2em;
 }
+.red {
+    background: #C0392B;
+}
+.red:hover { background: #9B2114; }
 
 input[type="text"] {
     border: 2px solid #ccc;
