--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,7 +11,7 @@ html, body {
 
 canvas {
     display: block;
-    background: #eee;
+    background: #f8f8f8;
     cursor: default;
 }
 
@@ -23,6 +23,15 @@ canvas {
     user-select: none;
 }
 
+h2 {
+    font-size: 1.2em;
+}
+
+h3 {
+    font-size: 0.9em;
+    margin-bottom: 6px;
+}
+
 #console {
     top: initial;
     bottom: 0;
@@ -32,13 +41,15 @@ canvas {
     width: 100%;
     padding: 0;
     max-height: 200px;
+    max-width: 300px;
+    word-wrap: break-word;
     overflow-y: scroll;
 }
 #console ul li {
-    background: #ccc;
+    background: #eee;
 }
 #console ul li:nth-child(odd) {
-    background: #ddd;
+    background: #eaeaea;
 }
 #console span {
     padding-right: 8px;
@@ -70,7 +81,8 @@ a:hover { background: #3c8386; }
 }
 .red:hover { background: #9B2114; }
 
-input[type="text"] {
+input[type="text"],
+input[type="number"] {
     border: 2px solid #ccc;
     margin-bottom: .5em;
     padding: .5em;
@@ -78,7 +90,8 @@ input[type="text"] {
     font-family: "Ubuntu";
     transition: border .1s ease;
 }
-input[type="text"]:focus {
+input[type="text"]:focus,
+input[type="number"]:focus {
     border: 2px solid cadetblue;
     outline: none;
 }
