--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,7 +41,7 @@ h3 {
     width: 100%;
     padding: 0;
     max-height: 200px;
-    max-width: 300px;
+    width: 300px;
     background: #eaeaea;
     word-wrap: break-word;
     overflow-y: scroll;
